--- a/index.html
+++ b/index.html
@@ -1,18 +1,316 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="aladdin.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Aladdin departamentos</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<style>
+		.bd-placeholder-img {
+			font-size: 1.125rem;
+			text-anchor: middle;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			user-select: none;
+		}
+
+		@media (min-width: 768px) {
+			.bd-placeholder-img-lg {
+				font-size: 3.5rem;
+			}
+		}
+
+		.b-example-divider {
+			height: 3rem;
+			background-color: rgba(0, 0, 0, .1);
+			border: solid rgba(0, 0, 0, .15);
+			border-width: 1px 0;
+			box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+		}
+
+		.b-example-vr {
+			flex-shrink: 0;
+			width: 1.5rem;
+			height: 100vh;
+		}
+
+		.bi {
+			vertical-align: -.125em;
+			fill: currentColor;
+		}
+
+		.nav-scroller {
+			position: relative;
+			z-index: 2;
+			height: 2.75rem;
+			overflow-y: hidden;
+		}
+
+		.nav-scroller .nav {
+			display: flex;
+			flex-wrap: nowrap;
+			padding-bottom: 1rem;
+			margin-top: -1px;
+			overflow-x: auto;
+			text-align: center;
+			white-space: nowrap;
+			-webkit-overflow-scrolling: touch;
+		}
+	</style>
 </head>
 
-<body>
-	<div id="app"></div>
+<body style="background-color: #1e1e1e;">
 
-	<script src="./js/aladdin.js"></script>
+
+
+	<main>
+		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<!-- carrucel -->
+			<div class="carousel-inner">
+				<!-- carr item 1 -->
+				<div class="carousel-item active">
+					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<rect width="100%" height="100%" fill="#202126" />
+					</svg>
+
+					<div class="container">
+						<div class="carousel-caption text-start">
+							<div class="parent">
+								<div class="par-1">
+									<img src="img/logoPresentacion.png" alt="">
+								</div>
+								<div class="par-2">
+									<h1>TEXTO</h1>
+									<p>Some representative placeholder content for the first slide of the carousel.</p>
+									<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- carru item 2 -->
+				<div class="carousel-item">
+					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<rect width="100%" height="100%" fill="#202126" />
+					</svg>
+
+					<div class="container">
+						<div class="carousel-caption">
+							<div class="parent">
+								<div class="par-1">
+									<img src="img/logoPresentacion.png" alt="">
+								</div>
+								<div class="par-2">
+									<h1>TEXTO</h1>
+									<p>Some representative placeholder content for the first slide of the carousel.</p>
+									<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- carru item 3 -->
+				<div class="carousel-item">
+					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<rect width="100%" height="100%" fill="#202126" />
+					</svg>
+
+					<div class="container">
+						<div class="carousel-caption text-end">
+							<div class="parent">
+								<div class="par-1">
+									<img src="img/logoPresentacion.png" alt="">
+								</div>
+								<div class="par-2">
+									<h1>TEXTO</h1>
+									<p>Some representative placeholder content for the first slide of the carousel.</p>
+									<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- fin del carrucel -->
+			<!-- previous -->
+			<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+			<!-- marck -->
+		</div>
+
+		<div class="container marketing">
+
+			<!-- Three columns of text below the carousel -->
+			<div class="row">
+				<!--  -->
+				<div class="col-lg-4">
+					<svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+						xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title style="color: #fff;">Placeholder</title>
+						<rect width="100%" height="100%" fill="#fff" /><text x="50%" y="50%" fill="#777"
+							dy=".3em">140x140</text>
+					</svg>
+
+					<h2 class="fw-normal">Heading</h2>
+					<p style="color: #fff;">Some representative placeholder content for the three columns of text below
+						the carousel. This is
+						the first column.</p>
+					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+				</div><!-- -->
+				<!--  -->
+				<div class="col-lg-4">
+					<svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+						xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>Placeholder</title>
+						<rect width="100%" height="100%" fill="#fff" /><text x="50%" y="50%" fill="#777"
+							dy=".3em">140x140</text>
+					</svg>
+
+					<h2 style="color: #fff;" class="fw-normal">Heading</h2>
+					<p style="color: #fff;">Another exciting bit of representative placeholder content. This time, we've
+						moved on to the
+						second column.</p>
+					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+				</div><!--  -->
+				<!--  -->
+				<div class="col-lg-4">
+					<svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+						xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>Placeholder</title>
+						<rect width="100%" height="100%" fill="#fff" /><text x="50%" y="50%" fill="#777"
+							dy=".3em">140x140</text>
+					</svg>
+
+					<h2 style="color: #fff;" class="fw-normal">Heading</h2>
+					<p style="color: #fff;">And lastly this, the third column of representative placeholder content.</p>
+					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+				</div><!-- -->
+			</div><!-- /.row -->
+
+
+			<!-- START THE FEATURETTES -->
+
+			<hr class="featurette-divider">
+			<!--  -->
+			<div class="row featurette">
+				<div class="col-md-7">
+					<div style="background-color: #fff; height: 300px; width: 650px;">
+						<h2 class="featurette-heading fw-normal lh-1 text-center">DEPARTAMENTOS</h2>
+						<p class="lead">And yes, this is the last block of representative placeholder content. Again,
+							not
+							really intended to be actually read, simply here to give you a better view of what this
+							would
+							look like with some actual content. Your content.</p>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+						height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>Placeholder</title>
+						<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%" fill="#aaa"
+							dy=".3em">500x500</text>
+					</svg>
+
+				</div>
+			</div>
+			<!--  -->
+
+			<hr class="featurette-divider">
+			<!--  -->
+			<div class="row featurette">
+				<div class="col-md-7 order-md-2">
+					<div style="background-color: #fff; height: 300px; width: 650px;">
+						<h2 class="featurette-heading fw-normal lh-1 text-center">LOFT</h2>
+						<p class="lead">Another featurette? Of course. More placeholder content here to give you an idea
+							of
+							how this layout would work with some actual real-world content in place.</p>
+					</div>
+				</div>
+				<div class="col-md-5 order-md-1">
+					<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+						height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>Placeholder</title>
+						<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%" fill="#444"
+							dy=".3em">500x500</text>
+					</svg>
+
+				</div>
+			</div>
+			<!--  -->
+			<hr class="featurette-divider">
+			<!--  -->
+			<div class="row featurette">
+				<div class="row featurette">
+					<div class="col-md-7">
+						<div style="background-color: #fff; height: 300px; width: 650px;">
+							<h2 class="featurette-heading fw-normal lh-1 text-center">And lastly, this one.</h2>
+							<p class="lead">And yes, this is the last block of representative placeholder content.
+								Again, not
+								really intended to be actually read, simply here to give you a better view of what this
+								would
+								look like with some actual content. Your content.</p>
+						</div>
+					</div>
+					<div class="col-md-5">
+						<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+							width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img"
+							aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
+							<title>Placeholder</title>
+							<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%" fill="#aaa"
+								dy=".3em">500x500</text>
+						</svg>
+
+					</div>
+				</div>
+				<!--  -->
+				<hr class="featurette-divider">
+
+				<!-- /END THE FEATURETTES -->
+
+			</div><!-- /.container -->
+
+
+    <!-- footer -->
+    <footer class="mt-auto  text-dark text-center" >
+        <p class="text-white">
+            Desarrollado por
+            <a href="https://www.codehuit.com/" class="verde  text-decoration-none" style="color: #b4ff00 ;">CODE</a>
+            <a href="https://www.codehuit.com/" class="text-white text-decoration-none">HUIT</a>
+        </p>
+    </footer>
+	</main>
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
