--- a/index.html
+++ b/index.html
@@ -8,89 +8,39 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-	<style>
-		.bd-placeholder-img {
-			font-size: 1.125rem;
-			text-anchor: middle;
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			user-select: none;
-		}
-
-		@media (min-width: 768px) {
-			.bd-placeholder-img-lg {
-				font-size: 3.5rem;
-			}
-		}
-
-		.b-example-divider {
-			height: 3rem;
-			background-color: rgba(0, 0, 0, .1);
-			border: solid rgba(0, 0, 0, .15);
-			border-width: 1px 0;
-			box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-		}
-
-		.b-example-vr {
-			flex-shrink: 0;
-			width: 1.5rem;
-			height: 100vh;
-		}
-
-		.bi {
-			vertical-align: -.125em;
-			fill: currentColor;
-		}
-
-		.nav-scroller {
-			position: relative;
-			z-index: 2;
-			height: 2.75rem;
-			overflow-y: hidden;
-		}
-
-		.nav-scroller .nav {
-			display: flex;
-			flex-wrap: nowrap;
-			padding-bottom: 1rem;
-			margin-top: -1px;
-			overflow-x: auto;
-			text-align: center;
-			white-space: nowrap;
-			-webkit-overflow-scrolling: touch;
-		}
-	</style>
 </head>
 
 <body style="background-color: #c7beb2;">
+	<!-- init nav -->
 	<header>
-		<nav class="navbar navbar-expand-lg " aria-label="Twelfth navbar example"
-			style="background-color:#a59f94 ;">
+		<nav class="navbar navbar-expand-lg " style="background-color:#a59f94; ">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">TEXTO</a>
+				<a style="color:white; font-size:24px;" class="navbar-brand m-2" href="index.html">ALADDIN</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
 					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-
-				<div class="collapse navbar-collapse justify-content-md-end mb-1 " id="navbarsExample10">
+				<div class="collapse navbar-collapse justify-content-md-end mb-1 text-white" id="navbarsExample10">
 					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="#">texto</a>
+						<li class="nav-item" >
+							<a style="color:white;" class="nav-link" href="./html/contacto.html">Contacto</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled">texto</a>
+							<a style="color:white;" class="nav-link" href="./html/galeria.html">Galeria</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled">texto</a>
+							<a style="color:white;" class="nav-link" href="./html/ubicacion.html">Ubicacion</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
+	<!-- fin del navegador -->
+
 	<main>
+		<!-- carrucel init -->
 		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
 				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
@@ -102,100 +52,34 @@
 			<div class="carousel-inner">
 				<!-- carr item 1 -->
 				<div class="carousel-item active">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="" aria-hidden="true"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#c7beb2" />
-					</svg>
-
 					<div class="container">
 						<div class="carousel-caption text-start">
-							<div class="parent">
-								<div class="par-1">
-									<div class="col-md-5">
-										<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-											width="500" height="500" xmlns="" role="img"
-											aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
-											focusable="false">
-
-											<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%"
-												fill="#aaa" dy=".3em">500x500</text>
-										</svg>
-
-									</div>
-								</div>
-								<div class="par-2">
-									<h1>TEXTO</h1>
-									<p>Some representative placeholder content for the first slide of the carousel.</p>
-									<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
-								</div>
-
+							<div class="">
+								<h1>TEXTO</h1>
+								<p>Some representative placeholder content for the first slide of the carousel.</p>
+								<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
 							</div>
 						</div>
 					</div>
 				</div>
 				<!-- carru item 2 -->
 				<div class="carousel-item">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#c7beb2" />
-					</svg>
-
 					<div class="container">
-						<div class="carousel-caption">
-							<div class="parent">
-								<div class="par-1">
-									<div class="col-md-5">
-										<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-											width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img"
-											aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
-											focusable="false">
-											<title>Placeholder</title>
-											<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%"
-												fill="#aaa" dy=".3em">500x500</text>
-										</svg>
-
-									</div>
-								</div>
-								<div class="par-2">
-									<h1>TEXTO</h1>
-									<p>Some representative placeholder content for the first slide of the carousel.</p>
-									<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
-								</div>
-
-							</div>
+						<div class="carousel-caption text-center">
+							<h1>TEXTO</h1>
+							<p>Some representative placeholder content for the first slide of the carousel.</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
 						</div>
 					</div>
 				</div>
+
 				<!-- carru item 3 -->
 				<div class="carousel-item">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#c7beb2" />
-					</svg>
-
 					<div class="container">
 						<div class="carousel-caption text-end">
-							<div class="parent">
-								<div class="par-1">
-									<div class="col-md-5">
-										<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-											width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img"
-											aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
-											focusable="false">
-											<title>Placeholder</title>
-											<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%"
-												fill="#aaa" dy=".3em">500x500</text>
-										</svg>
-
-									</div>
-								</div>
-								<div class="par-2">
-									<h1>TEXTO</h1>
-									<p>Some representative placeholder content for the first slide of the carousel.</p>
-									<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
-								</div>
-
-							</div>
+							<h1>TEXTO</h1>
+							<p>Some representative placeholder content for the first slide of the carousel.</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
 						</div>
 					</div>
 				</div>
@@ -212,160 +96,96 @@
 			</button>
 			<!-- marck -->
 		</div>
-
+		<!-- fin del carrucel -->
+		<!--  -->
 		<div class="container marketing">
 
 			<!-- Three columns of text below the carousel -->
 			<div class="row">
-				<!--  -->
-				<div class="col-lg-4">
-					<svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-						xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<title style="color: #fff;">Placeholder</title>
-						<rect width="100%" height="100%" fill="#fff" /><text x="50%" y="50%" fill="#777"
-							dy=".3em">140x140</text>
-					</svg>
-
-					<h2 class="fw-normal">Heading</h2>
-					<p style="color: #fff;">Some representative placeholder content for the three columns of text below
-						the carousel. This is
-						the first column.</p>
-					<p><a class="btn btn-secondary" href="#">Detalles &raquo;</a></p>
-				</div><!-- -->
-				<!--  -->
-				<div class="col-lg-4">
-					<svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-						xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#fff" /><text x="50%" y="50%" fill="#777"
-							dy=".3em">140x140</text>
-					</svg>
-
-					<h2 style="color: #fff;" class="fw-normal">Heading</h2>
-					<p style="color: #fff;">Another exciting bit of representative placeholder content. This time, we've
-						moved on to the
-						second column.</p>
-					<p><a class="btn btn-secondary" href="#">Detalles &raquo;</a></p>
-				</div><!--  -->
-				<!--  -->
-				<div class="col-lg-4">
-					<svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-						xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#fff" /><text x="50%" y="50%" fill="#777"
-							dy=".3em">140x140</text>
-					</svg>
-
-					<h2 style="color: #fff;" class="fw-normal">Heading</h2>
-					<p style="color: #fff;">And lastly this, the third column of representative placeholder content.</p>
-					<p><a class="btn btn-secondary" href="#">Detalles &raquo;</a></p>
-				</div><!-- -->
-			</div><!-- /.row -->
-
-
-			<!-- START THE FEATURETTES -->
-
-			<hr class="featurette-divider">
-			<!--  -->
-			<div class="row featurette">
-				<div class="col-md-7">
-					<div style="background-color: #fff; ">
-						<h2 class="featurette-heading fw-normal lh-1 text-center">DEPARTAMENTOS</h2>
-						<p class="lead">And yes, this is the last block of representative placeholder content. Again,
-							not
-							really intended to be actually read, simply here to give you a better view of what this
-							would
-							look like with some actual content. Your content.</p>
-					</div>
-				</div>
-				<div class="col-md-5">
-					<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-						height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%" fill="#aaa"
-							dy=".3em">500x500</text>
-					</svg>
-
-				</div>
-			</div>
-			<!--  -->
-
-			<hr class="featurette-divider">
-			<!--  -->
-			<div class="row featurette">
-				<div class="col-md-7 order-md-3">
-					<div style="background-color: #fff;">
-						<h2 class="featurette-heading fw-normal lh-1 text-center">LOFT</h2>
-						<p class="lead">Another featurette? Of course. More placeholder content here to give you an idea
-							of
-							how this layout would work with some actual real-world content in place.</p>
-					</div>
-				</div>
-				<div class="col-md-5 order-md-1">
-					<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-						height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%" fill="#444"
-							dy=".3em">500x500</text>
-					</svg>
-
-				</div>
-			</div>
-			<!--  -->
-			<hr class="featurette-divider">
-			<!--  -->
-			<div class="row featurette">
+				<hr class="featurette-divider" style="color: white;">
+				<!-- Galery 1 -->
 				<div class="row featurette">
-					<div class="col-md-7">
-						<div style="background-color: #fff; ">
-							<h2 class="featurette-heading fw-normal lh-1 text-center">And lastly, this one.</h2>
-							<p class="lead">And yes, this is the last block of representative placeholder content.
-								Again, not
-								really intended to be actually read, simply here to give you a better view of what this
-								would
-								look like with some actual content. Your content.</p>
+					<div class="col-md-6">
+						<div class=" p-4 text-bg-light rounded-3">
+							<h2>Change the background</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur deleniti accusantium
+								repellendus dolores modi provident? Tempore voluptatum laborum quisquam accusamus
+								adipisci fugit a distinctio repellendus minima quos. Amet, et voluptas.</p>
+							<button class="btn btn-outline-light" type="button">Example button</button>
 						</div>
 					</div>
-					<div class="col-md-5">
-						<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-							width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img"
-							aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-							<title>Placeholder</title>
-							<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%" fill="#aaa"
-								dy=".3em">500x500</text>
-						</svg>
-
+					<div class="col-md-6">
+						<div class="images">
+							<img src="./img/gold/p1.png"
+								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
+								width="130" height="500">
+							</img>
+							<img src="./img/gold/p2.png"
+								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
+								width="130" height="500">
+							</img>
+							<img src="./img/gold/p3.png"
+								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
+								width="130" height="500">
+							</img>
+						</div>
 					</div>
 				</div>
-				<!--  -->
-				<hr class="featurette-divider">
-
-				<!-- /END THE FEATURETTES -->
-
-			</div><!-- /.container -->
-
-
-			<!-- footer -->
-			<footer class="mt-auto  text-dark text-center">
-				<p class="text-dark">
-					Desarrollado por
-					<a href="https://www.codehuit.com/" class="verde  text-decoration-none"
-						style="color: #b4ff00 ;">CODE</a>
-					<a href="https://www.codehuit.com/" class="text-dark text-decoration-none">HUIT</a>
-				</p>
-			</footer>
+				<hr class="featurette-divider" style="color: white;">
+				<!--  galery 2 -->
+				<div class="row featurette">
+					<div class="col-md-6">
+						<div class=" p-4 text-bg-light rounded-3">
+							<h2>Change the background</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur deleniti accusantium
+								repellendus dolores modi provident? Tempore voluptatum laborum quisquam accusamus
+								adipisci fugit a distinctio repellendus minima quos. Amet, et voluptas.</p>
+							<button class="btn btn-outline-light" type="button">Example button</button>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="images">
+							<img src="./img/gold/p1.png"
+								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
+								width="130" height="500">
+							</img>
+							<img src="./img/gold/p2.png"
+								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
+								width="130" height="500">
+							</img>
+							<img src="./img/gold/p3.png"
+								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
+								width="130" height="500">
+							</img>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--  -->
 	</main>
+<!-- maps -->
+	<!-- <div id="map"></div> -->
+<!-- Fin de maps -->
+
+	<!-- footer -->
+	<footer class="mt-auto  text-dark text-center">
+		<p class="text-dark">
+			Desarrollado por
+			<a href="https://www.codehuit.com/" class="verde  text-decoration-none" style="color: #b4ff00 ;">CODE</a>
+			<a href="https://www.codehuit.com/" class="text-dark text-decoration-none">HUIT</a>
+		</p>
+	</footer>
+	<!-- fin del footer -->
 
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 		crossorigin="anonymous"></script>
+	<script src="./js/aladdin.js"></script>
+	
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 </body>
 
 </html>
