--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
-<body style="background-color: #c7beb2;">
+<body style="background-color: #ffffff;">
 	<!-- init nav -->
 	<header>
 		<nav class="navbar navbar-expand-lg " style="background-color:#a59f94; ">
@@ -23,7 +23,7 @@
 				</button>
 				<div class="collapse navbar-collapse justify-content-md-end mb-1 text-white" id="navbarsExample10">
 					<ul class="navbar-nav">
-						<li class="nav-item" >
+						<li class="nav-item">
 							<a style="color:white;" class="nav-link" href="./html/contacto.html">Contacto</a>
 						</li>
 						<li class="nav-item">
@@ -38,135 +38,43 @@
 		</nav>
 	</header>
 	<!-- fin del navegador -->
-
 	<main>
-		<!-- carrucel init -->
-		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			</div>
-			<!-- carrucel -->
-			<div class="carousel-inner">
-				<!-- carr item 1 -->
-				<div class="carousel-item active">
-					<div class="container">
-						<div class="carousel-caption text-start">
-							<div class="">
-								<h1>TEXTO</h1>
-								<p>Some representative placeholder content for the first slide of the carousel.</p>
-								<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
-							</div>
-						</div>
-					</div>
+		<div class="container">
+			<div class="position-relative overflow-hidden p-3 p-md-5 text-center "
+				style="background-image: url(./img/back/fondo.jpg);">
+				<div class="col-md-5 p-lg-5 mx-auto my-5">
+					<h1 class="display-4 fw-normal">Punny headline</h1>
+					<p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts
+						with
+						this example based on Apple’s marketing pages.</p>
+					<a class="btn btn-outline-secondary" href="#">Coming soon</a>
 				</div>
-				<!-- carru item 2 -->
-				<div class="carousel-item">
-					<div class="container">
-						<div class="carousel-caption text-center">
-							<h1>TEXTO</h1>
-							<p>Some representative placeholder content for the first slide of the carousel.</p>
-							<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
-						</div>
-					</div>
-				</div>
-
-				<!-- carru item 3 -->
-				<div class="carousel-item">
-					<div class="container">
-						<div class="carousel-caption text-end">
-							<h1>TEXTO</h1>
-							<p>Some representative placeholder content for the first slide of the carousel.</p>
-							<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- fin del carrucel -->
-			<!-- previous -->
-			<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-			<!-- marck -->
-		</div>
-		<!-- fin del carrucel -->
-		<!--  -->
-		<div class="container marketing">
-
-			<!-- Three columns of text below the carousel -->
-			<div class="row">
-				<hr class="featurette-divider" style="color: white;">
-				<!-- Galery 1 -->
-				<div class="row featurette">
-					<div class="col-md-6">
-						<div class=" p-4 text-bg-light rounded-3">
-							<h2>Change the background</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur deleniti accusantium
-								repellendus dolores modi provident? Tempore voluptatum laborum quisquam accusamus
-								adipisci fugit a distinctio repellendus minima quos. Amet, et voluptas.</p>
-							<button class="btn btn-outline-light" type="button">Example button</button>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="images">
-							<img src="./img/gold/p1.png"
-								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
-								width="130" height="500">
-							</img>
-							<img src="./img/gold/p2.png"
-								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
-								width="130" height="500">
-							</img>
-							<img src="./img/gold/p3.png"
-								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
-								width="130" height="500">
-							</img>
-						</div>
-					</div>
-				</div>
-				<hr class="featurette-divider" style="color: white;">
-				<!--  galery 2 -->
-				<div class="row featurette">
-					<div class="col-md-6">
-						<div class=" p-4 text-bg-light rounded-3">
-							<h2>Change the background</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur deleniti accusantium
-								repellendus dolores modi provident? Tempore voluptatum laborum quisquam accusamus
-								adipisci fugit a distinctio repellendus minima quos. Amet, et voluptas.</p>
-							<button class="btn btn-outline-light" type="button">Example button</button>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="images">
-							<img src="./img/gold/p1.png"
-								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
-								width="130" height="500">
-							</img>
-							<img src="./img/gold/p2.png"
-								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
-								width="130" height="500">
-							</img>
-							<img src="./img/gold/p3.png"
-								class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-2"
-								width="130" height="500">
-							</img>
-						</div>
-					</div>
-				</div>
+				<div class="product-device shadow-sm d-none d-md-block"></div>
+				<div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 			</div>
 		</div>
-		<!--  -->
+
+		<div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+			<div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+				<div class="my-3 p-3">
+					<h2 class="display-5">Another headline</h2>
+					<p class="lead">And an even wittier subheading.</p>
+				</div>
+				<div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+				</div>
+			</div>
+			<div class="text-bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+				<div class="my-3 py-3">
+					<h2 class="display-5">Another headline</h2>
+					<p class="lead">And an even wittier subheading.</p>
+				</div>
+				<div class="bg-light shadow-sm mx-auto"
+					style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+			</div>
+		</div>
 	</main>
-<!-- maps -->
-	<!-- <div id="map"></div> -->
-<!-- Fin de maps -->
+
+
 
 	<!-- footer -->
 	<footer class="mt-auto  text-dark text-center">
@@ -184,8 +92,9 @@
 		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 		crossorigin="anonymous"></script>
 	<script src="./js/aladdin.js"></script>
-	
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
+
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 </body>
 
 </html>
